force-app/main/default/objects/Insurance__c/Insurance__c.object-meta.xml
<CustomObject>
    <label>Insurance</label>
    <nameField>
        <label>Insurance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insurances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>