force-app/main/default/objects/Insurance__c/fields/Insurance_Value__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Value__c</fullName>
    <formula>YearlyPremium__c  +   VALUE(text( Insurance_Period__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insurance Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>