force-app/main/default/objects/Insurance__c/fields/Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Maturity_Date__c</fullName>
    <formula>YEAR( TODAY() ) +  VALUE(text( Insurance_Period__c  ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maturity Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>