force-app/main/default/objects/Insurance__c/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Insurance_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Term Plan</fullName>
            </value>
            <value>
                <fullName>Unit linked Insurance plan</fullName>
            </value>
            <value>
                <fullName>Third party Insurance</fullName>
            </value>
            <value>
                <fullName>Fire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>