force-app/main/default/objects/Insurance__c/fields/YearlyPremium__c.field-meta.xml
<CustomField>
    <fullName>YearlyPremium__c</fullName>
    <formula>IF(ISPICKVAL(  Sub_Type__c , &apos;term plan&apos;),100, IF( ISPICKVAL(  Sub_Type__c ,&apos;unit linked insurance plan&apos;),130,IF( ISPICKVAL(  Sub_Type__c ,&apos;Third party insurance&apos;),75,IF(ISPICKVAL(  Sub_Type__c ,&apos;Fire&apos;),50,NULL))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Yearly Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>